--- a/examples/irc-client/pom.xml
+++ b/examples/irc-client/pom.xml
@@ -5,15 +5,36 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.richfaces.examples</groupId>
-        <artifactId>richfaces-example-parent</artifactId>
+        <groupId>org.richfaces</groupId>
+        <artifactId>richfaces-parent</artifactId>
         <version>4.3.0-SNAPSHOT</version>
-        <relativePath>../parent/pom.xml</relativePath>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
+    <groupId>org.richfaces.examples</groupId>
     <artifactId>irc-client</artifactId>
     <name>RichFaces Examples Richfaces IRC Client Application</name>
     <packaging>war</packaging>
+
+    <dependencyManagement>
+        <dependencies>
+            <!-- RichFaces BOM Import -->
+            <dependency>
+                <groupId>org.richfaces</groupId>
+                <artifactId>richfaces-bom</artifactId>
+                <version>4.3.0-SNAPSHOT</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.richfaces</groupId>
+                <artifactId>richfaces-build</artifactId>
+                <version>4.3.0-SNAPSHOT</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <dependencies>
 
@@ -25,12 +46,8 @@
         </dependency>
 
         <dependency>
-            <groupId>org.richfaces.core</groupId>
-            <artifactId>richfaces-core-impl</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.richfaces.ui</groupId>
-            <artifactId>richfaces-components-ui</artifactId>
+            <groupId>org.richfaces</groupId>
+            <artifactId>richfaces-framework</artifactId>
         </dependency>
 
         <dependency>
@@ -43,6 +60,7 @@
             <artifactId>pircbot</artifactId>
             <version>1.4.2</version>
         </dependency>
+
     </dependencies>
 
     <build>
