Reverted components-demo and jpa-demo to use the templates project

--- a/examples/components-demo/pom.xml
+++ b/examples/components-demo/pom.xml
@@ -68,6 +68,14 @@
             <artifactId>richfaces-framework</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.richfaces.examples</groupId>
+            <artifactId>template</artifactId>
+            <type>war</type>
+            <version>${project.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+
         <!-- Support of additional constrains, e.g. @NotEmpty - won't work on MyFaces -->
         <dependency>
             <groupId>org.hibernate</groupId>
