--- a/examples/template/src/main/webapp/WEB-INF/web.xml
+++ b/examples/template/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-    xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID"
-    version="3.0">
-    
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID"
+         version="3.0">
+
+    <context-param>
+        <param-name>org.richfaces.skin</param-name>
+        <param-value>#{skinBean.skin}</param-value>
+    </context-param>
     <context-param>
         <param-name>javax.faces.PROJECT_STAGE</param-name>
         <param-value>Development</param-value>
@@ -10,11 +14,12 @@
 
     <context-param>
         <param-name>org.richfaces.enableControlSkinning</param-name>
-        <param-value>true</param-value>
+        <param-value>#{skinBean.enableElementsSkinning}</param-value>
     </context-param>
+
     <context-param>
         <param-name>org.richfaces.enableControlSkinningClasses</param-name>
-        <param-value>true</param-value>
+        <param-value>#{skinBean.enableClassesSkinning}</param-value>
     </context-param>
 
     <context-param>
@@ -52,11 +57,6 @@
         <url-pattern>*.jsf</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
-        <welcome-file>index.html</welcome-file>
-        <welcome-file>index.htm</welcome-file>
-        <welcome-file>index.jsp</welcome-file>
-        <welcome-file>default.html</welcome-file>
-        <welcome-file>default.htm</welcome-file>
-        <welcome-file>default.jsp</welcome-file>
+        <welcome-file>index.jsf</welcome-file>
     </welcome-file-list>
 </web-app>
