--- a/examples/push-demo/pom.xml
+++ b/examples/push-demo/pom.xml
@@ -23,23 +23,31 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.richfaces.examples</groupId>
-        <artifactId>richfaces-example-parent</artifactId>
+        <groupId>org.richfaces</groupId>
+        <artifactId>richfaces-parent</artifactId>
         <version>4.3.0-SNAPSHOT</version>
-        <relativePath>../parent/pom.xml</relativePath>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
+    <groupId>org.richfaces.examples</groupId>
     <artifactId>push-demo</artifactId>
     <name>RichFaces Examples Push</name>
     <packaging>war</packaging>
-    
+
     <dependencyManagement>
         <dependencies>
             <!-- RichFaces BOM Import -->
             <dependency>
                 <groupId>org.richfaces</groupId>
                 <artifactId>richfaces-bom</artifactId>
-                <version>${version.richfaces}</version>
+                <version>4.3.0-SNAPSHOT</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.richfaces</groupId>
+                <artifactId>richfaces-build</artifactId>
+                <version>4.3.0-SNAPSHOT</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -50,24 +58,22 @@
 
         <dependency>
             <groupId>org.jboss.spec</groupId>
-            <artifactId>jboss-javaee-web-6.0</artifactId>
+            <artifactId>jboss-javaee-6.0</artifactId>
             <type>pom</type>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
-            <groupId>org.richfaces.examples</groupId>
-            <artifactId>template</artifactId>
-            <type>war</type>
+            <groupId>org.richfaces</groupId>
+            <artifactId>richfaces-framework</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>org.richfaces.core</groupId>
-            <artifactId>richfaces-core-impl</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.richfaces.ui.core</groupId>
-            <artifactId>richfaces-ui-core-ui</artifactId>
+            <groupId>org.richfaces.examples</groupId>
+            <artifactId>template</artifactId>
+            <version>4.3.0-SNAPSHOT</version>
+            <type>war</type>
+            <scope>runtime</scope>
         </dependency>
 
         <dependency>
@@ -78,11 +84,13 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
+            <version>1.6.4</version>
         </dependency>
 
     </dependencies>
 
     <build>
+        <finalName>push-demo</finalName>
         <plugins>
             <plugin>
                 <artifactId>maven-checkstyle-plugin</artifactId>
